--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.7",
+    "@tamagui/accordion": "^1.74.8",
     "@tamagui/card": "1.74.8",
     "@tamagui/font-inter": "1.74.8",
     "@tamagui/react-native-media-driver": "1.74.8",
@@ -20,7 +22,8 @@
     "@tamagui/themes": "1.74.8",
     "expo": "^51.0.31",
     "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.5",
+    "expo-device": "~6.0.2",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
