--- a/package.json
+++ b/package.json
@@ -14,18 +14,13 @@
     "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.7",
-    "@tamagui/accordion": "^1.74.8",
-    "@tamagui/card": "1.74.8",
-    "@tamagui/font-inter": "1.74.8",
-    "@tamagui/react-native-media-driver": "1.74.8",
-    "@tamagui/shorthands": "1.74.8",
-    "@tamagui/themes": "1.74.8",
     "expo": "^51.0.31",
     "expo-constants": "~16.0.1",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
@@ -38,12 +33,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "tamagui": "1.74.8"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@tamagui/babel-plugin": "1.74.8",
     "@types/react": "~18.2.45",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
